--- a/contacto.html
+++ b/contacto.html
@@ -2,12 +2,10 @@
 <html>
 	<head>
 		<title>Contacto</title>
-		<link rel="stylesheet" type="text/css" href="style.css"> rel="stylesheet" type="text/css" hrel="style.css"></style>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Contacto</h1>
-
-
 		<ul>
 			<li>Telefono </li>
 				<p> +502 6547 6354</p>
